[gd_scene load_steps=6 format=2]

[ext_resource path="res://sticker/frame.tscn" type="PackedScene" id=1]
[ext_resource path="res://sticker/sticker.tscn" type="PackedScene" id=2]
[ext_resource path="res://sticker/picture.gd" type="Script" id=3]
[ext_resource path="res://sticker/sticker_manager.gd" type="Script" id=4]
[ext_resource path="res://sticker/back_to_start.png" type="Texture" id=5]

[node name="StickerLevel" type="Node2D"]

[node name="StickerManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FileDialog" type="FileDialog" parent="StickerManager"]
margin_right = 448.0
margin_bottom = 288.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Save your creation!!!"
access = 1
filters = PoolStringArray( "*.png; PNG Images" )
current_dir = "user://home/korygd/Game Development/Games/Global Game Jam/2022 - Duality"
current_path = "user://home/korygd/Game Development/Games/Global Game Jam/2022 - Duality/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="StickerManager"]
visible = false
margin_left = 32.0
margin_top = 32.0
margin_right = 444.0
margin_bottom = 100.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="Sprite" parent="."]
centered = false
script = ExtResource( 3 )

[node name="StickerPanel" type="Node2D" parent="."]
position = Vector2( 608, 512 )

[node name="StickerTree" parent="StickerPanel" instance=ExtResource( 2 )]

[node name="StickerFish" parent="StickerPanel" instance=ExtResource( 2 )]
position = Vector2( 96, 0 )
frame = 1

[node name="StickerDuck" parent="StickerPanel" instance=ExtResource( 2 )]
position = Vector2( 0, 96 )
frame = 2

[node name="StickerBear" parent="StickerPanel" instance=ExtResource( 2 )]
position = Vector2( 96, 96 )
frame = 3

[node name="StickerCow" parent="StickerPanel" instance=ExtResource( 2 )]
position = Vector2( 49, 192 )
frame = 4

[node name="Frame" parent="." instance=ExtResource( 1 )]

[connection signal="file_selected" from="StickerManager/FileDialog" to="StickerManager" method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="StickerManager/FileDialog" to="StickerManager" method="_on_FileDialog_popup_hide"]
[connection signal="pressed" from="StickerManager/TextureButton" to="StickerManager" method="_on_TextureButton_pressed"]
